--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -117,6 +117,7 @@ section .banner-left {
 .cta h1 {
   font-weight: bold;
   font-size: 2.8ßrem;
+  font-size: 2.8rem;
   line-height: 1.2;
 }
 .cta h3 {
@@ -426,6 +427,7 @@ section .banner-left {
 .cta-text h1 {
   font-weight: bold;
   font-size: 2.5rem;
+  font-size: 3rem;
   line-height: 1.2;
 }
 .cta-text h3 {
