--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -205,6 +205,9 @@ section .banner-left {
   margin-bottom: .5rem;
   line-height: 1.3;
 }
+.article-title a {
+  color: #589CE3;
+}
 
 .section3 {
  display: flex;
@@ -223,18 +226,20 @@ section .banner-left {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   margin-left: 72px;
-  margin-right: 40px;
+  margin-right: 72px;
   margin-bottom: 32px;
 
 }
-
+.course:hover{
+  background-color: #E7E7E7;
+}
 .course{
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
-  margin-right:2rem;
+  margin-right:0;
   background-color: white;
   width: 30%
 }
